--- a/index.css
+++ b/index.css
@@ -83,9 +83,27 @@ aside > ul {
 }
 aside > ul > li {
   background-color: cadetblue;
+  padding: 0.2em;
+  margin: 0.4em;
+  border-radius: 0.3em;
 }
+aside > ul > li:hover {
+  color: darkcyan;
+  cursor: pointer;
+  text-decoration: underline;
+  background-color: powderblue;
+}
+
+/* PRODUCTS */
 #products {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-auto-rows: auto;
+  margin: 0.5em;
+}
+#products > article {
+  border: 1px solid gray;
+  border-radius: 0.2em;
+  margin: 0.5em;
+  padding: 0.5em;
 }
